# src/firecracker/swagger/firecracker.yaml
@@ -339,6 +339,37 @@ paths:
           schema:
             $ref: "#/definitions/Error"
 
+  /vfio/{id}:
+    put:
+      summary: Creates or updates a VFIO passthrough device. Pre-boot only.
+      description:
+        Creates new VFIO passthrough device with ID specified by id parameter.
+        If a VFIO device with the specified ID already exists, updates its state based on new input.
+      operationId: putGuestVfioByID
+      parameters:
+        - name: id
+          in: path
+          description: The id of the VFIO passthrough device
+          required: true
+          type: string
+        - name: body
+          in: body
+          description: VFIO device properties
+          required: true
+          schema:
+            $ref: "#/definitions/Vfio"
+      responses:
+        204:
+          description: VFIO device is created/updated
+        400:
+          description: VFIO device cannot be created/updated due to bad input
+          schema:
+            $ref: "#/definitions/Error"
+        default:
+          description: Internal server error.
+          schema:
+            $ref: "#/definitions/Error"
+
   /pmem/{id}:
     put:
       summary: Creates or updates a pmem device. Pre-boot only.
@@ -1256,6 +1287,21 @@ definitions:
         description:
           Flag to map backing file in read-only mode.
 
+  Vfio:
+    type: object
+    required:
+      - id
+      - path_on_host
+    properties:
+      id:
+        type: string
+        description:
+          Identificator for this VFIO passthrough device.
+      path_on_host:
+        type: string
+        description:
+          Sysfs path to the PCI device for VFIO passthrough.
+
   Error:
     type: object
     properties:
@@ -1302,6 +1348,11 @@ definitions:
         $ref: "#/definitions/Vsock"
       entropy:
         $ref: "#/definitions/EntropyDevice"
+      vfio:
+        type: array
+        description: Configurations for all VFIO passthrough devices.
+        items:
+          $ref: "#/definitions/Vfio"
 
   InstanceActionInfo:
     type: object
